[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Amity Aharoni <amittai-shlomo.aharoni@student.uva.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pytest = "^7.4.3"
tensorflow = "2.7.0"
astor = "^0.8.1"
attrs = "^23.1.0"
backcall = "^0.2.0"
bleach = "^6.1.0"
absl-py = "^2.0.0"
cffi = "^1.16.0"
click = "^8.1.7"
click-default-group = "^1.2.4"
cmake = "^3.27.9"
cycler = "^0.12.1"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
entrypoints = "^0.4"
grpcio = "^1.60.0"
h5py = "^3.10.0"
ipykernel = "^6.27.1"
ipython = "^8.18.1"
ipython-genutils = "^0.2.0"
ipywidgets = "^8.1.1"
isodate = "^0.6.1"
jedi = "^0.19.1"
jinja2 = "^3.1.2"
joblib = "^1.3.2"
jsonschema = "^4.20.0"
jupyter = "^1.0.0"
jupyter-client = "^8.6.0"
jupyter-console = "^6.6.3"
jupyter-core = "^5.5.0"
keras-applications = "^1.0.8"
keras-preprocessing = "^1.1.2"
kiwisolver = "^1.4.5"
markdown = "^3.5.1"
markupsafe = "^2.1.3"
matplotlib = "^3.8.2"
mistune = "^3.0.2"
nbconvert = "^7.12.0"
nbformat = "^5.9.2"
notebook = "^7.0.6"
numpy = "^1.26.2"
pandas = "^2.1.4"
pandocfilters = "^1.5.0"
parso = "^0.8.3"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
pillow = "^10.1.0"
prometheus-client = "^0.19.0"
prompt-toolkit = "^3.0.41"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
9 = "^9"
pygments = "^2.17.2"
pykeen = "^1.10.1"
pyparsing = "^3.1.1"
pyrsistent = "^0.20.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
pyzmq = "^25.1.2"
qtconsole = "^5.5.1"
rdflib = "^7.0.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
send2trash = "^1.8.2"
six = "^1.16.0"
tensorboard = "^2.15.1"
termcolor = "^2.4.0"
terminado = "^0.18.0"
testpath = "^0.6.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
tornado = "^6.4"
tqdm = "^4.66.1"
traitlets = "^5.14.0"
wcwidth = "^0.2.12"
webencodings = "^0.5.1"
werkzeug = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
